--- a/app/modules/phone/phone-grid.partials.html
+++ b/app/modules/phone/phone-grid.partials.html
@@ -8,7 +8,7 @@
         Sort by - <a href="#" ng-click="sort('name')">Alphabetically</a> | <a href="#" ng-click="sort('ratings')">Ratings</a>
     </div>
     <div class="row">
-        <div class="col-xs-3" ng-repeat="phone in model.products | filter:query | orderBy:sortkey">
+        <div class="col-xs-3" ng-repeat="phone in model | filter:query | orderBy:sortkey">
             <div class="col-xs-12"> <a href="#/products/phones/{{phone.phoneId}}">{{phone.name}}</a>
             </div>
             <div class="col-xs-12">{{phone.brand}}</div>
