--- a/app/index.html
+++ b/app/index.html
@@ -18,11 +18,11 @@
 
     <!--Application global files. Order matters-->
     <script src="js/app.js"></script>
+    <script src="js/utilities.js"></script>
     <script src="js/routes.js"></script>
     <script src="js/animations.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/filters.js"></script>
-    <script src="js/services.js"></script>
     <script src="js/directives.js"></script>
 
     <!--Loading the dependent controller-->
