Update on localstorage event. Added for binding update $scope.$apply()

--- a/app/modules/products/products-display.partials.html
+++ b/app/modules/products/products-display.partials.html
@@ -1,7 +1,7 @@
 <h2 class="text-center">All Products</h2>
 <div class="container">
     <div class="row">
-        <ng-include src="'modules/cart/cart-icon.partials.html'" ng-controller="CartIconController" ></ng-include>
+        <ng-include src="'modules/cart/cart-icon.partials.html'"></ng-include>
     </div>
     <!--Phone Grid-->
     <div class="row">
