Filtering of products

--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
 
     <script src="../libs/js/jquery.min.js"></script>
     <script src="../libs/js/bootstrap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.legacy.min.js"></script>
+    <script src="../libs/js/lodash.min.js"></script>
 
     <!--Angular Libraries-->
     <script src="../libs/js/angular/angular.min.js"></script>
@@ -40,7 +40,6 @@
 
     <!-- Additional services -->
     <script src="services/localstorage.service.js"></script>
-
 </head>
 
 <body>
