--- a/app/modules/products/products-display.partials.html
+++ b/app/modules/products/products-display.partials.html
@@ -1,4 +1,4 @@
-<h2 class="text-center">All Products</h2>
+<h2 class="text-center">All Products Update</h2>
 <div class="container">
     <div class="row">
         <ng-include src="'modules/cart/cart-icon.partials.html'"></ng-include>
